clusters/mershab/resources/operated/ollama-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ing
  namespace: openwebui
  annotations: 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
      #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: ollama.mershab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui-ollama
                port:
                  number: 11434
#  tls:
#  - hosts:
#    - argocd.mershab.com
#    secretName: argocd-ingress-http
